# dioxus-repros

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
src/: main.rs
