[package]
name = "append-child-repro"
version = "0.1.0"
authors = ["Ryo Hirayama <ryo12redstone@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.6.0-alpha.4", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
tokio = { version = "1.41.0", features = ["full"], optional = true }

[features]
default = []
server = ["dioxus/axum", "dep:tokio"]
web = ["dioxus/web"]
